# gadgetos

./: Cargo.toml  README.md  build.rs
boot/: .env  32bit-gdt.asm  32bit-main.asm  32bit-print.asm  32bit-switch.asm  README.md  boot_sect_disk.asm  boot_sect_main.asm  boot_sect_memory.asm  boot_sect_print.asm  boot_sect_segmentation.asm  boot_sect_stack.asm
kernel/: Cargo.toml
kernel/src/: main.rs
kernel/src/alloc/: README.md
kernel/src/display/: char_writer.rs  char_writter.rs  framebuffer_writter.rs  logger.rs  mod.rs
kernel/src/interrupts/: exceptions.rs  idt.rs  mod.rs
src/: main.rs
