[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11.3"
lazy_static = { version = "1.4.0", features=["spin_no_std"] }
noto-sans-mono-bitmap = "0.2.0"
once_cell = { version = "1.18.0", default-features = false }
spin = { version = "0.9.8" }